<resources>
    <string name="app_name">login page</string>
    <string name="name_hint">Enter your name</string>
    <string name="pwd_hint"> Enter password</string>
    <string name="login">Login</string>
    <string name="welcome_to_smartsense">Welcome, to smartSense</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="sign_up">Don\'t have an account? Sign up</string>

</resources>